# InfoBloxMCP-Chat-Dec31-2025

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCUMENTATION.md  LICENSE  LLM_CONFIG_EXAMPLES.json  PROJECT_SUMMARY.md  README.md  SECURITY.md  check_zone.py  client_example.py  comprehensive_test.py  configure_server_manual.py  examples.py  fix-port-issue.sh  infoblox-backend.py  infoblox-chat.html  infoblox-mcp-server.py  install.sh  integration_test.py  marriott-webui-setup.sh  marriott-webui-test.sh  mcp_chat.py  pyproject.toml  requirements.txt  sethford.mcp-figma-extension-1.0.0.vsix  setup_config.py  test_aws_import_mock.py  test_server.py  tool_inventory.json  verify_audit.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/infoblox_mcp/: __init__.py  additional_tools.py  aws_import_tools.py  client.py  config.py  dhcp_tools.py  dns_tools.py  error_handling.py  llm_client.py  server.py  splunk_client.py  splunk_tools.py  tools.py
webui_integration/: INTEGRATION_SUMMARY.md  README.md  config.py  infoblox_function.py  install.sh  intent_recognition.py  llm_fallback.py  mcp_client.py  openwebui_function.py  requirements.txt  response_formatter.py  test_integration.py
